[tool.poetry]
name = "ts-forecast"
version = "0.1.0"
description = "Utilities for forecasting on time series and panel data"
authors = ["Quentin Bolliet <bolliet.quentin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
pandas = "^2.3.1"
scikit-learn = "^1.7.0"
joblib = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
pytest = "^8.4.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
