[project]
name = "ts-forecast"
version = "0.1.0"
description = "Utilities for forecasting on time series and panel data"
authors = [{ name = "Quentin Bolliet", email = "bolliet.quentin@gmail.com" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy>=2.3.1,<3",
    "pandas>=2.3.1,<3",
    "scikit-learn>=1.7.0,<2",
    "joblib>=1.5.1,<2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1,<7",
    "matplotlib>=3.10.5,<4",
    "seaborn>=0.13.2,<0.14",
    "pytest>=8.4.1,<9",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.16,<10",
    "mkdocstrings-python>=1.16.12,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[tool.hatch.build.targets.wheel]
packages = ["tsforecast"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
